Fix horizontal wrapping on different widths

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,6 @@
     flex-direction: row;
     justify-content: center;
     position: relative;
-    column-gap: 1rem;
 }
 
 @media only screen and (max-width: 900px) {
