--- a/client/src/Components/CourseQuickView/CourseQuickView.module.scss
+++ b/client/src/Components/CourseQuickView/CourseQuickView.module.scss
@@ -50,7 +50,8 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    padding-top: 0.7rem;
+    font-size: 1.4rem;
+    font-weight: 400;
   }
 
   h4 {
