--- a/client/src/Components/Main/Main.module.scss
+++ b/client/src/Components/Main/Main.module.scss
@@ -15,6 +15,7 @@
     min-width: 70%;
     width: 70%;
     margin: 0.5rem;
+    margin-right: 1.5rem;
     box-shadow: rgba(100, 100, 111, 0.25) 0px 5px 12px 0px;
   }
 }
